<resources>
    <string name="app_name">NotToDo</string>

    <!--home-->
    <string name="home_menu_home">홈</string>
    <string name="home_menu_recommend">추천</string>
    <string name="home_menu_result">성취</string>
    <string name="home_menu_profile">내 정보</string>
    <string name="home_add_nottodo">낫투두 추가</string>
    <string name="home_nothing_nottodo">아직 아무것도 없네요,\n새로운 낫투두를 작성해보세요!</string>
    <string name="home_date">12월 3주차</string>
    <string name="home_motive_description">낫투두를 통해 본인만의 규율을 지켜보세요</string>
    <string name="home_inner_item_title">유튜브 프리미엄 구독 취소하기</string>
    <string name="home_outter_item_title">기상 직후</string>
    <string name="home_outter_item_title_second"> 유튜브 보지 않기</string>
    <string name="home_inner_item_description">캡스톤 PPT 만들기</string>
    <string name="home_outter_goals">목표</string>
    <string name="home_bottom_trash">삭제하기</string>
    <string name="home_bottom_edit">수정하기</string>
    <string name="home_bottom_another_day">다른 날도 할래요</string>
    <string name="home_bottom_another_day_description">이 낫투두를 원하는 날짜에 추가할 수 있어요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--on_board-->
    <string name="on_board_second_desc">하지 않을 것을\n<b>구체적으로 작성</b>하여\n목표 실현에 가까워지세요</string>
    <string name="on_board_third_desc"><b>정확하게</b> 달성을 기록하고\n변화를 <b>체계적으로</b> 관리하세요</string>
    <string name="on_board_fourth_desc">낫투두 실천이 막막할 때는\n구체적인 <b>방법을 추천</b>해드려요</string>
    <string name="on_board_fifth_desc">나의 성취 기록을\n<b>통계</b>로 만나보세요</string>
    <string name="on_board_body_skip">건너뛰기</string>
    <string name="on_board_body_prev">이전</string>
    <string name="on_board_body_next">다음</string>
    <string name="on_board_header_title">나만의 규율을 지키고\n더 나은 일상을 지속하세요</string>
    <string name="on_board_header_desc">이제부터 낫투두가 도와줄게요!</string>
    <string name="on_board_header_start">시작할래요!</string>
    <string name="on_board_first">첫 번째,</string>
    <string name="on_board_second">두 번째,</string>
    <string name="on_board_third">세 번째,</string>
    <string name="on_board_final">마지막으로,</string>
    <string name="on_board_body_start">낫투두 등록하러 갈래요!</string>
    <!--search-->
    <string name="search_history_hint">하지 않을 일을 적어주세요…</string>
    <string name="search_complete">완료</string>
    <string name="search_history">낫투두 기록</string>
    <!--addition-->
    <string name="addition_title">낫투두 추가하기</string>
    <string name="addition_notice">* 하루 최대 3개까지 낫투두를 작성할 수 있어요!</string>
    <string name="addition_mission_title">하지 않을 일을 적어주세요</string>
    <string name="addition_mission_name">ex) 유튜브 2시간 이상 보지 않기</string>
    <string name="addition_action_title">구체적인 실천 행동은 무엇인가요?</string>
    <string name="addition_recommend_move">추천 받기</string>
    <string name="addition_action_name">ex) 9시 이후 휴대폰 가방에 기기</string>
    <string name="addition_action_notice">* 실천 행동 추가는 낫투두 당 2개까지 가능합니다.</string>
    <string name="addition_situation_title">어떤 상황인가요?</string>
    <string name="addition_goal_title">이루고자 하는 목표는 무엇인가요?</string>
    <string name="addition_goal_name">ex) 유튜브 2시간 이상 보지 않기</string>
    <string name="addition_date_title">실천 날짜</string>
    <string name="addition_add_btn">추가하기</string>
    <!--calendar_bottom_sheet-->
    <string name="calendar_bottom_sheet_complete">선택 완료</string>
    <!--achievement-->
    <string name="achievement_title">성취</string>
    <string name="achievement_desc">* 올해의 낫투두가 누적된 통계예요!</string>
    <string name="achievement_pager_empty_desc">아직 아무것도 없네요,\n새로운 낫투두를 작성해보세요!</string>
    <string name="achievement_pager_situation_title">언제 낫투두를 가장 많이 시도했을까요?</string>
    <string name="achievement_pager_mission_title">내가 달성한 낫투두의 순위는?</string>
    <!--recommendation-->
    <string name="recommendation_title">추천</string>
    <string name="recommendation_write_direct">직접 작성하기</string>
    <string name="recommendation_warning_message">* 박스 터치 시, 낫투두가 아닌 환경만 입력됩니다.</string>
    <!--activity recommendation-->
    <string name="activity_recommendation_title">추천받기</string>
    <string name="activity_recommendation_warning_message">* 박스 터치 시, 낫투두가 아닌 환경만 입력됩니다.</string>
    <!--home-->
    <string name="home_data">12월 3주차</string>
    <string name="home_description">낫투두를 통해 본인만의 규율을 지켜보세요</string>
    <string name="home_fbtn_floating">낫투두 추가</string>
    <!--home blank-->
    <string name="home_blank_nothing_nottodo">아직 아무것도 없네요, 새로운 낫투두를 작성해보세요!</string>
    <!--add situation list text-->
    <string name="add_situation_list_text">출근시간</string>
    <!--add situation recent list text-->
    <string name="add_situation_recent_list_text">출근시간</string>
    <!--my page-->
    <string name="my_page_title">내 정보</string>
    <string name="my_page_user_name">홍서현</string>
    <string name="my_page_user_id">ghdtjgus123!</string>
    <string name="my_page_user_guide">낫투두 가이드</string>
    <string name="my_page_user_question">자주 묻는 질문</string>
    <string name="my_page_user_push">푸시 알림 설정</string>
    <string name="my_page_user_announcement">공지사항</string>
    <string name="my_page_user_contact">문의하기</string>
    <string name="my_page_user_policies">약관 및 정책</string>
    <string name="my_page_user_version">버전 정보 0.0.1</string>
    <string name="my_page_user_logout">버전 정보 0.0.1</string>
    <string name="my_page_user_withdrawal">버전 정보 0.0.1</string>
    <!--add situation-->
    <string name="add_situation_title">상황 추가하기</string>
    <string name="add_situation_complete">완료</string>
    <string name="add_situation_nottodo_situation_keyword">낫투두가 추천하는 상황 키워드</string>
    <string name="add_situation_nottodo_recent_keyword">최근 사용한 키워드</string>
    <string name="add_situation_text_watcher">0/15</string>
    <string name="add_situation_wirte_direct_hint">직접 입력하기...</string>
    <!--calendar week description-->
    <string name="calendar_week_description_mon">월</string>
    <string name="calendar_week_description_tue">화</string>
    <string name="calendar_week_description_wed">수</string>
    <string name="calendar_week_description_thu">목</string>
    <string name="calendar_week_description_fri">금</string>
    <string name="calendar_week_description_sat">토</string>
    <string name="calendar_week_description_sun">일</string>


</resources>